Delete records work, better handling of add records.

--- a/app/views/zone/_record.html.erb
+++ b/app/views/zone/_record.html.erb
@@ -10,6 +10,10 @@
     <%= label_tag :value %><br>
     <%= text_area_tag :value %>
   </div>
+  <div class="field">
+    <%= label_tag :ttl %><br>
+    <%= text_field_tag :ttl, nil, placeholder: 3.hours %>
+  </div>
   <div class="actions">
     <%= submit_tag "Add record" %>
   </div>
