--- a/app/views/zone/_record.html.erb
+++ b/app/views/zone/_record.html.erb
@@ -11,7 +11,7 @@
     <%= text_area_tag :value %>
   </div>
   <div class="field">
-    <%= label_tag :ttl %><br>
+    <%= label_tag 'TTL (in seconds)' %><br>
     <%= text_field_tag :ttl, nil, placeholder: 3.hours %>
   </div>
   <div class="actions">
