--- a/app/views/zone/index.html.erb
+++ b/app/views/zone/index.html.erb
@@ -1,6 +1,5 @@
-<% if flash[:notice] %>
-  <div class="notice"><%= flash[:notice] %></div>
-<% end %>
+<%= render :partial => 'layouts/notice' %>
+
 <h1>Zone list</h1>
 <table>
   <tr>
