--- a/app/views/zone/show.html.erb
+++ b/app/views/zone/show.html.erb
@@ -1,6 +1,5 @@
-<% if flash[:notice] %>
-  <div class="notice"><%= flash[:notice] %></div>
-<% end %>
+<%= render :partial => 'layouts/notice' %>
+
 <h1>Records</h1>
 <table>
   <tr>
@@ -21,4 +20,5 @@
   <% end %>
 </table>
 
+<h2>Add new record</h2>
 <%= render 'record' %>
