Added Twitter bootstrap.

--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -9,6 +9,8 @@
     <%= text_area_tag :destinations %>
   </div>
   <div class="actions">
-    <%= submit_tag %>
+    <button type="submit" class="btn btn-success">
+      <i class="icon-ok"></i> Add address
+    </button>
   </div>
 <% end %>
