--- a/app/views/zone/index.html.erb
+++ b/app/views/zone/index.html.erb
@@ -1,7 +1,5 @@
-<%= render :partial => 'layouts/notice' %>
-
 <h1>Zone list</h1>
-<table>
+<table class="table table-striped">
   <tr>
     <th>Name</th>
     <th>Updated</th>
