--- a/app/views/zone/_record.html.erb
+++ b/app/views/zone/_record.html.erb
@@ -15,6 +15,8 @@
     <%= text_field_tag :ttl, nil, placeholder: 3.hours %>
   </div>
   <div class="actions">
-    <%= submit_tag "Add record" %>
+    <button type="submit" class="btn btn-success">
+      <i class="icon-ok"></i> Add record
+    </button>
   </div>
 <% end %>
