Add icons to menu links.

--- a/app/views/layouts/_links.html.erb
+++ b/app/views/layouts/_links.html.erb
@@ -1,4 +1,4 @@
-<li><%= link_to "Emails", emails_path %></li>
-<li><%= link_to "Zones", zone_path %></li>
-<li><%= link_to "Domains", domain_list_path %></li>
-<li><%= link_to "Web redirs", domain_webredir_path %></li>
+<li><%= link_to glyph('envelope') + " Emails", emails_path %></li>
+<li><%= link_to glyph('globe') + " Zones", zone_path %></li>
+<li><%= link_to glyph('briefcase') + " Domains", domain_list_path %></li>
+<li><%= link_to glyph('share') + " Web redirs", domain_webredir_path %></li>
