--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div class="actions">
     <button type="submit" class="btn btn-success">
-      <i class="icon-ok"></i> Add address
+      <%= glyph('ok') %> Add address
     </button>
   </div>
 <% end %>
