--- a/app/views/zone/_record.html.erb
+++ b/app/views/zone/_record.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="actions">
     <button type="submit" class="btn btn-success">
-      <i class="icon-ok"></i> Add record
+      <%= glyph('ok') %> Add record
     </button>
   </div>
 <% end %>
