--- a/app/views/domain/list.html.erb
+++ b/app/views/domain/list.html.erb
@@ -1,18 +1,22 @@
 <h1>Domain list</h1>
-<table class="table table-striped">
-  <tr>
-    <th>Domain</th>
-    <th>Created</th>
-    <th>Updated</th>
-    <th>Status</th>
-  </tr>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Domain</th>
+      <th>Created</th>
+      <th>Updated</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
   <% @domains.each do |domain| %>
     <tr>
       <td><%= domain[:fqdn] %></td>
-      <td><%= domain[:date_created] %></td>
-      <td><%= domain[:date_updated] %></td>
+      <td><%= domain[:date_created].to_formatted_s(:db) %></td>
+      <td><%= domain[:date_updated].to_formatted_s(:db) %></td>
       <td><%= domain[:status].join(', ') %></td>
     </tr>
   <% end %>
+  </tbody>
 </table>
 
