--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -1,10 +1,14 @@
 <%= form_tag emails_path, method: 'post' do %>
   <div class="field">
     <%= label_tag :address %><br>
-    <%= text_field_tag :address %>
+    <div class="input-append">
+      <%= text_field_tag :address %>
+      <span class="add-on">@<%= @domain %></span>
+    </div>
   </div>
   <div class="field">
     <%= label_tag :destinations %><br>
+    <span class="help-block">Select a previous email, or enter a list of emails to forward to.</span>
     <%= select_tag :default_dest, options_for_select(@destinations, @destinations.first), prompt: "[no email]" %><br>
     <%= text_area_tag :destinations %>
   </div>
