--- a/app/views/zone/index.html.erb
+++ b/app/views/zone/index.html.erb
@@ -1,15 +1,19 @@
 <h1>Zone list</h1>
-<table class="table table-striped">
-  <tr>
-    <th>Name</th>
-    <th>Updated</th>
-    <th>Version</th>
-  </tr>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Updated</th>
+      <th>Version</th>
+    </tr>
+  </thead>
+  <tbody>
   <% @zones.each do |zone| %>
     <tr>
       <td><%= link_to zone[:name], zone_show_path(zone[:id]) %></td>
-      <td><%= zone[:date_updated] %></td>
+      <td><%= zone[:date_updated].to_formatted_s(:db) %></td>
       <td><%= zone[:version] %></td>
     </tr>
   <% end %>
+</tbody>
 </table>
