--- a/app/views/zone/show.html.erb
+++ b/app/views/zone/show.html.erb
@@ -1,12 +1,15 @@
 <h1>Records</h1>
-<table class="table table-striped">
-  <tr>
-    <th>Name</th>
-    <th>Type</th>
-    <th>Value</th>
-    <th>TTL</th>
-    <th></th>
-  </tr>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Type</th>
+      <th>Value</th>
+      <th>TTL</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
   <% @records.each do |record| %>
     <tr>
       <td><%= record[:name] %></td>
@@ -14,15 +17,19 @@
       <td><%= record[:value] %></td>
       <td><%= record[:ttl] %></td>
       <td>
-        <%= link_to glyph('remove') + ' Delete'.html_safe,
-          delete_record_path(@zone_id, record[:id]), class: "btn btn-danger",
+        <%= link_to icon_button('Delete', 'remove'),
+          delete_record_path(@zone_id, record[:id]),
+          class: "btn btn-danger btn-mini",
           method: :delete, data: { confirm: 'Are you sure?' } %>
       </td>
     </tr>
   <% end %>
+  </tbody>
 </table>
 
-<div class="well">
-  <h2>Add new record</h2>
-  <%= render 'record' %>
+<div class="container-fluid">
+  <div class="well">
+    <h2>Add new record</h2>
+    <%= render 'record' %>
+  </div>
 </div>
