--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -1,20 +1,29 @@
+<div class="form-horizontal">
 <%= form_tag emails_path, method: 'post' do %>
-  <div class="field">
-    <%= label_tag :address %><br>
-    <div class="input-append">
-      <%= text_field_tag :address %>
-      <span class="add-on">@<%= @domain %></span>
+  <div class="field control-group">
+    <%= label_tag :address, nil, class: "control-label" %>
+    <div class="controls">
+      <div class="input-append">
+        <%= text_field_tag :address, nil, class: "span7" %>
+        <span class="add-on">@<%= @domain %></span>
+      </div>
     </div>
   </div>
-  <div class="field">
-    <%= label_tag :destinations %><br>
-    <span class="help-block">Select a previous email, or enter a list of emails to forward to.</span>
-    <%= select_tag :default_dest, options_for_select(@destinations, @destinations.first), prompt: "[no email]" %><br>
-    <%= text_area_tag :destinations %>
+  <div class="field control-group">
+    <%= label_tag :destinations, nil, class: "control-label" %>
+    <div class="controls">
+      <%= select_tag :default_dest, options_for_select(@destinations, @destinations.first), prompt: "[no email]" %><br>
+      <%= text_area_tag :destinations %>
+    </div>
   </div>
-  <div class="actions">
-    <button type="submit" class="btn btn-success">
-      <%= glyph('ok') %> Add address
-    </button>
+  <div class="field control-group">
+    <div class="controls">
+      <div class="actions">
+        <button type="submit" class="btn btn-success">
+          <%= glyph('ok') %> Add forwarding
+        </button>
+      </div>
+    </div>
   </div>
 <% end %>
+</div>
