--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,5 +1,16 @@
 <h1>Email forwards</h1>
 
+<div class="btn-group">
+  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-plus icon-white"></i> New forwarding <span class="caret"></span></a>
+  <div class="dropdown-menu">
+    <div class="container-fluid">
+      <div class="well well-sm">
+        <%= render 'form' %>
+      </div>
+    </div>
+  </div>
+</div>
+
 <table class="table table-striped table-hover">
   <thead>
     <tr>
@@ -24,9 +35,3 @@
   </tbody>
 </table>
 
-<br>
-
-<div class="well span4">
-  <h3>Add forwarding</h3>
-  <%= render 'form' %>
-</div>
