--- a/app/views/zone/_record.html.erb
+++ b/app/views/zone/_record.html.erb
@@ -1,22 +1,37 @@
+<div class="form-horizontal">
 <%= form_tag add_record_path(@zone_id), method: 'post' do %>
-  <div class="field">
-    <%= label_tag :name %><br>
-    <%= text_field_tag :name %>
+  <div class="field control-group">
+    <%= label_tag :name, nil, class: "control-label" %>
+    <div class="controls">
+      <%= text_field_tag :name, nil, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= select_tag :type, options_for_select(Gandi::TYPE::all) %>
+  <div class="field control-group">
+    <%= label_tag :type, nil, class: "control-label" %>
+    <div class="controls">
+      <%= select_tag :type, options_for_select(Gandi::TYPE::all) %>
+    </div>
   </div>
-  <div class="field">
-    <%= label_tag :value %><br>
-    <%= text_area_tag :value %>
+  <div class="field control-group">
+    <%= label_tag :value, nil, class: "control-label" %>
+    <div class="controls">
+      <%= text_area_tag :value %>
+    </div>
   </div>
-  <div class="field">
-    <%= label_tag 'TTL (in seconds)' %><br>
-    <%= text_field_tag :ttl, nil, placeholder: 3.hours %>
+  <div class="field control-group">
+    <%= label_tag :ttl, 'TTL', class: "control-label" %>
+    <div class="controls">
+      <%= text_field_tag :ttl, nil, placeholder: 3.hours %>
+    </div>
   </div>
-  <div class="actions">
-    <button type="submit" class="btn btn-success">
-      <%= glyph('ok') %> Add record
-    </button>
+  <div class="field control-group">
+    <div class="controls">
+      <div class="actions">
+        <button type="submit" class="btn btn-success">
+          <%= glyph('ok') %> Add record
+        </button>
+      </div>
+    </div>
   </div>
 <% end %>
+</div>
