--- a/app/views/zone/show.html.erb
+++ b/app/views/zone/show.html.erb
@@ -1,4 +1,15 @@
 <h1>Records</h1>
+<div class="btn-group">
+  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-plus icon-white"></i> New record <span class="caret"></span></a>
+  <div class="dropdown-menu">
+    <div class="container-fluid">
+      <div class="well well-sm">
+        <%= render 'record' %>
+      </div>
+    </div>
+  </div>
+</div>
+
 <table class="table table-striped table-hover">
   <thead>
     <tr>
@@ -27,9 +38,3 @@
   </tbody>
 </table>
 
-<div class="container-fluid">
-  <div class="well">
-    <h2>Add new record</h2>
-    <%= render 'record' %>
-  </div>
-</div>
