--- a/app/views/domain/index.html.erb
+++ b/app/views/domain/index.html.erb
@@ -1,14 +1,8 @@
 <h1>Domain list</h1>
-<div class="btn-group">
-  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-search icon-white"></i> Search domain <span class="caret"></span></a>
-  <div class="dropdown-menu">
-    <div class="container-fluid">
-      <div class="well well-sm">
-        <%= render 'domain_form' %>
-      </div>
-    </div>
-  </div>
+<div class="container-fluid domain_search">
+  <%= render 'domain_form' %>
 </div>
+<div class="domain_results"></div>
 
 <table class="table table-striped table-hover">
   <thead>
