--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,14 +1,7 @@
 <h1>Email forwards</h1>
 
-<div class="btn-group">
-  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-plus icon-white"></i> New forwarding <span class="caret"></span></a>
-  <div class="dropdown-menu">
-    <div class="container-fluid">
-      <div class="well well-sm">
-        <%= render 'form' %>
-      </div>
-    </div>
-  </div>
+<div class="email_create">
+  <%= render 'form' %>
 </div>
 
 <table class="table table-striped table-hover">
