Better domain search list.

--- a/app/views/domain/_domain_form.html.erb
+++ b/app/views/domain/_domain_form.html.erb
@@ -2,7 +2,7 @@
 <%= form_tag domain_search_path, method: 'get', class: "form-search" do %>
   <div class="field control-group">
     <%= text_field_tag :domain, nil, class: "form-control input-medium search-query" %>
-    <button name="submit" type="submit" class="btn btn-success">
+    <button name="submit" type="submit" class="btn btn-primary">
       <%= glyph('search') %> Search
     </button>
   </div>
