--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -8,7 +8,7 @@
   <%= label_tag :destinations, nil, class: "hidden-desktop hidden-phone hidden-tablet" %>
   <%= select_tag :destinations, options_for_select(@destinations, @destinations.first),
     class: "form-control combobox" %>
-  <button type="submit" class="btn btn-success">
+  <button type="submit" class="btn btn-primary">
     <%= glyph('ok') %> Create
   </button>
 <% end %>
