--- a/app/views/domain/search.html.erb
+++ b/app/views/domain/search.html.erb
@@ -1,18 +1,29 @@
 <h1>Domain search result</h1>
 
 <table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>Domain</th>
+      <th>Price</th>
+      <th></th>
+    </tr>
+  </thead>
   <tbody>
-  <% @domain_info.each do |domain, status| %>
+  <% @domain_info.each do |domain, price| %>
     <tr>
       <td><%= domain %></td>
       <td>
-      <% if status == "available" %>
+        <% if price != "unavailable" %>
+          <%= number_to_currency(price[:price],
+                { format: "%u %n", unit: price[:currency] }) %>
+        <% end %>
+      </td>
+      <td>
+      <% if price != "unavailable" %>
         <%= link_to icon_button('Buy', 'shopping-cart'),
           domain_create_path + "?" + { domain: domain }.to_param,
           class: "btn btn-success btn-small",
           method: :post, data: { confirm: 'Are you sure?' } %>
-      <% else %>
-        Unavailable
       <% end %>
     </td>
   </tr>
