--- a/app/views/domain/search.html.erb
+++ b/app/views/domain/search.html.erb
@@ -19,11 +19,14 @@
         <% end %>
       </td>
       <td>
-      <% if price != "unavailable" %>
+      <% if price == "unavailable" %>
+        <%= link_to "Whois", "http://en.gandi.net/whois/details?search=#{domain}",
+          target: '_blank' %>
+      <% else %>
         <%= link_to icon_button('Buy', 'shopping-cart'),
           domain_create_path + "?" + { domain: domain }.to_param,
           class: "btn btn-success btn-small",
-          method: :post, data: { confirm: 'Are you sure?' } %>
+          method: :post, data: { confirm: "Are you sure you want to buy domain #{domain}?" } %>
       <% end %>
     </td>
   </tr>
