--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -2,7 +2,7 @@
   <%= label_tag :address, nil, class: "hidden-desktop hidden-phone hidden-tablet" %>
   <div class="input-append">
     <%= text_field_tag :address, nil, class: "form-control",
-      placeholder: "Address" %>
+      placeholder: "Address", autocapitalize: 'none' %>
     <span class="add-on">@<%= @email_domain %></span>
   </div>
   <%= label_tag :destinations, nil, class: "hidden-desktop hidden-phone hidden-tablet" %>
