Use symbols for glyph icons.

--- a/app/views/domain/_domain_form.html.erb
+++ b/app/views/domain/_domain_form.html.erb
@@ -3,7 +3,7 @@
   <div class="field control-group">
     <%= text_field_tag :domain, nil, class: "form-control input-medium search-query" %>
     <button name="submit" type="submit" class="btn btn-primary">
-      <%= glyph('search') %> Search
+      <%= glyph(:search) %> Search
     </button>
   </div>
 <% end %>
