--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -9,6 +9,6 @@
   <%= select_tag :destinations, options_for_select(@destinations, @destinations.first),
     class: "form-control combobox" %>
   <button type="submit" class="btn btn-primary">
-    <%= glyph('ok') %> Create
+    <%= glyph(:ok) %> Create
   </button>
 <% end %>
