--- a/app/views/domain/search.html.erb
+++ b/app/views/domain/search.html.erb
@@ -23,7 +23,7 @@
         <%= link_to "Whois", "http://en.gandi.net/whois/details?search=#{domain}",
           target: '_blank' %>
       <% else %>
-        <%= link_to icon_button('Buy', 'shopping-cart'),
+        <%= link_to icon_button('Buy', :'shopping-cart'),
           domain_create_path + "?" + { domain: domain }.to_param,
           class: "btn btn-success btn-small",
           method: :post, data: { confirm: "Are you sure you want to buy domain #{domain}?" } %>
