--- a/app/views/layouts/_links.html.erb
+++ b/app/views/layouts/_links.html.erb
@@ -1,11 +1,11 @@
-<li><%= link_to glyph('envelope') + " Emails", emails_path %></li>
-<li><%= link_to glyph('globe') + " Zones", zone_path %></li>
-<li><%= link_to glyph('briefcase') + " Domains", domain_path %></li>
-<li><%= link_to glyph('share') + " Web redirs", webredir_path %></li>
+<li><%= link_to glyph(:envelope) + " Emails", emails_path %></li>
+<li><%= link_to glyph(:globe) + " Zones", zone_path %></li>
+<li><%= link_to glyph(:briefcase) + " Domains", domain_path %></li>
+<li><%= link_to glyph(:share) + " Web redirs", webredir_path %></li>
 <li>
   <% if user_signed_in? %>
-    <%= link_to glyph('user') + " Log out", destroy_user_session_path, method: :delete %>
+    <%= link_to glyph(:user) + " Log out", destroy_user_session_path, method: :delete %>
   <% else %>
-    <%= link_to glyph('user') + " Sign in", user_omniauth_authorize_path(:google_oauth2) %>
+    <%= link_to glyph(:user) + " Sign in", user_omniauth_authorize_path(:google_oauth2) %>
   <% end %>
 </li>
