--- a/app/views/zone/_record.html.erb
+++ b/app/views/zone/_record.html.erb
@@ -28,7 +28,7 @@
     <div class="controls">
       <div class="actions">
         <button type="submit" class="btn btn-success">
-          <%= glyph('ok') %> Add record
+          <%= glyph(:ok) %> Add record
         </button>
       </div>
     </div>
