--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
-    <%= stylesheet_link_tag "application", :media => "all", "data-turbolinks-track" => true %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
@@ -34,7 +34,7 @@
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application" %>
   </head>
   <body>
 
@@ -70,13 +70,13 @@
         </div>
 
         <div class="span9">
-          <%= bootstrap_flash %>
+          <%= bootstrap_flash_rails41 %>
           <%= yield %>
         </div>
       </div><!--/row-->
 
       <footer>
-      <p><small>&copy; <a href="http://github.com/ollej">Olle Johansson</a> 2013</small></p>
+      <p><small>&copy; <a href="http://github.com/ollej">Olle Johansson</a> 2013-2016</small></p>
       </footer>
 
     </div> <!-- /container -->
