Add projecthoneypot QuickLink

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,5 +81,6 @@
 
     </div> <!-- /container -->
 
+    <a href="http://utopianrealms.org/dextral.php?pg=8792"><!-- gala --></a>
   </body>
 </html>
