--- a/app/views/domain/_domain_form.html.erb
+++ b/app/views/domain/_domain_form.html.erb
@@ -1,7 +1,7 @@
 <div class="form-horizontal">
-<%= form_tag domain_search_path, method: 'get', class: "form-search" do %>
-  <div class="field control-group">
-    <%= text_field_tag :domain, nil, class: "form-control input-medium search-query" %>
+<%= form_tag domain_search_path, method: 'get', class: 'form-search' do %>
+  <div class="field form-group">
+    <%= text_field_tag :domain, nil, class: 'form-control input-medium search-query' %>
     <button name="submit" type="submit" class="btn btn-primary">
       <%= glyph(:search) %> Search
     </button>
