--- a/app/views/domain/search.html.erb
+++ b/app/views/domain/search.html.erb
@@ -25,7 +25,7 @@
       <% else %>
         <%= link_to icon_button('Buy', :'shopping-cart'),
           domain_create_path + "?" + { domain: domain }.to_param,
-          class: "btn btn-success btn-small",
+          class: 'btn btn-success btn-sm',
           method: :post, data: { confirm: "Are you sure you want to buy domain #{domain}?" } %>
       <% end %>
     </td>
