--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Spicyham" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : 'Spicyham' %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -12,7 +12,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
-    <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= stylesheet_link_tag 'application', :media => 'all' %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
@@ -34,49 +34,40 @@
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag 'application' %>
   </head>
   <body>
 
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">Spicyham</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <%= render partial: 'layouts/links' %>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    <%= nav_bar responsive: true,
+      brand: 'Spicyham', brand_link: root_path do %>
+      <%= menu_group do %>
+        <%= render partial: 'layouts/links', locals: { item_class: '' } %>
+      <% end %>
+    <% end %>
 
     <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3 hidden-phone">
+      <div class="row">
 
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <%= render partial: 'layouts/links' %>
-            </ul>
-          </div>
-
+        <div class="col-md-3 hidden-xs sidebar-nav">
+          <ul class="list-group">
+            <li class="list-group-item">Sidebar</li>
+            <%= render partial: 'layouts/links', locals: { item_class: 'list-group-item' } %>
+          </ul>
         </div>
 
-        <div class="span9">
-          <%= bootstrap_flash_rails41 %>
+        <div class="col-md-9">
+          <%= bootstrap_flash %>
           <%= yield %>
         </div>
+
       </div><!--/row-->
 
       <footer>
-      <p><small>&copy; <a href="http://github.com/ollej">Olle Johansson</a> 2013-2016</small></p>
+        <p>
+          <small>
+            &copy; <a href="http://github.com/ollej">Olle Johansson</a> 2013-2018
+          </small>
+        </p>
       </footer>
 
     </div> <!-- /container -->
