Upgrade to Ruby v2.4.2
Switched to xmlrpc gem as the old one didn't support Ruby v2.4.x and
hasn't been updated in years.

--- a/app/views/domain/index.html.erb
+++ b/app/views/domain/index.html.erb
@@ -16,10 +16,10 @@
   <tbody>
   <% @domains.each do |domain| %>
     <tr>
-      <td><%= domain[:fqdn] %></td>
-      <td><%= format_date(domain[:date_created]) %></td>
-      <td><%= format_date(domain[:date_updated]) %></td>
-      <td><%= domain[:status].join(', ') %></td>
+      <td><%= domain['fqdn'] %></td>
+      <td><%= format_date(domain['date_created']) %></td>
+      <td><%= format_date(domain['date_updated']) %></td>
+      <td><%= domain['status'].join(', ') %></td>
     </tr>
   <% end %>
   </tbody>
