--- a/app/views/domain/search.html.erb
+++ b/app/views/domain/search.html.erb
@@ -13,18 +13,18 @@
     <tr>
       <td><%= domain %></td>
       <td>
-        <% if price != "unavailable" %>
-          <%= number_to_currency(price[:price],
-                { format: "%u %n", unit: price[:currency] }) %>
+        <% if price != 'unavailable' %>
+          <%= number_to_currency(price['price'],
+                { format: "%u %n", unit: price['currency'] }) %>
         <% end %>
       </td>
       <td>
-      <% if price == "unavailable" %>
-        <%= link_to "Whois", "http://en.gandi.net/whois/details?search=#{domain}",
+      <% if price == 'unavailable' %>
+        <%= link_to 'Whois', "http://en.gandi.net/whois/details?search=#{domain}",
           target: '_blank' %>
       <% else %>
         <%= link_to icon_button('Buy', :'shopping-cart'),
-          domain_create_path + "?" + { domain: domain }.to_param,
+          domain_create_path + '?' + { domain: domain }.to_param,
           class: 'btn btn-success btn-sm',
           method: :post, data: { confirm: "Are you sure you want to buy domain #{domain}?" } %>
       <% end %>
