--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@
       <footer>
         <p>
           <small>
-            &copy; <a href="http://github.com/ollej">Olle Johansson</a> 2013-2018
+            &copy; <a href="http://github.com/ollej">Olle Wreede</a> 2013-2020
           </small>
         </p>
       </footer>
