--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
     <div class="container-fluid">
       <div class="row">
 
-        <div class="col-md-3 hidden-xs sidebar-nav">
+        <div class="col-md-3 hidden-xs hidden-sm sidebar-nav">
           <ul class="list-group">
             <li class="list-group-item">Sidebar</li>
             <%= render partial: 'layouts/links', locals: { item_class: 'list-group-item' } %>
