--- a/app/views/domain/index.html.erb
+++ b/app/views/domain/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Domain list</h1>
-<div class="container-fluid domain_search">
+<div class="container-fluid domain_search toolbar">
   <%= render 'domain_form' %>
 </div>
 <div class="domain_results"></div>
