--- a/app/views/domain/_domain_form.html.erb
+++ b/app/views/domain/_domain_form.html.erb
@@ -1,10 +1,14 @@
 <div class="form-horizontal">
 <%= form_tag domain_search_path, method: 'get', class: 'form-search' do %>
-  <div class="field form-group">
-    <%= text_field_tag :domain, nil, class: 'form-control input-medium search-query' %>
-    <button name="submit" type="submit" class="btn btn-primary">
-      <%= glyph(:search) %> Search
-    </button>
+  <div class="form-row">
+    <div class="col-10">
+      <%= text_field_tag :domain, nil, class: 'form-control input-medium search-query' %>
+    </div>
+    <div class="col">
+      <button name="submit" type="submit" class="btn btn-primary">
+        <%= icon_button("Search", :search) %>
+      </button>
+    </div>
   </div>
 <% end %>
 </div>
