--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -2,8 +2,8 @@
   <div class="form-row">
     <div class="col-12 col-md-5">
       <div class="input-group">
-        <%= text_field_tag :address, nil, class: 'form-control',
-          placeholder: 'Address', autocapitalize: 'none' %>
+        <%= text_field_tag :address, @default_email, class: 'form-control',
+          placeholder: 'Address', autocapitalize: 'none', autofocus: true %>
         <div class="input-group-append">
           <span class="input-group-text">@<%= @email_domain %></span>
         </div>
