--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Email forwards</h1>
 
-<div class="email_create">
+<div class="col-12 email_create">
   <%= render 'form' %>
+</div>
+
+<div class="col-12 d-block d-lg-none">
+  <%= render partial: "shared/bookmarklet" %>
 </div>
 
 <table class="table table-striped table-hover">
