--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,11 @@
             <li class="list-group-item">Sidebar</li>
             <%= render partial: 'layouts/links', locals: { item_class: 'list-group-item' } %>
           </ul>
+
+          <div class="col-12">
+            <br>
+            <%= render partial: "shared/bookmarklet" %>
+          </div>
         </div>
 
         <div class="col-lg-9">
