--- a/app/views/layouts/_links.html.erb
+++ b/app/views/layouts/_links.html.erb
@@ -1,9 +1,11 @@
 <%= menu_item icon(:mail) + ' Emails', emails_path, class: item_class %>
-<%= menu_item icon(:globe) + ' Zones', zone_path, class: item_class %>
-<%= menu_item icon(:briefcase) + ' Domains', domain_path, class: item_class %>
-<%= menu_item icon('link-external') + ' Web Redirs', webredir_path, class: item_class %>
 <% if user_signed_in? %>
-  <%= menu_item icon('person') + ' Profile', edit_user_registration_path(current_user), class: item_class %>
+  <% if current_user.admin? %>
+    <%= menu_item icon(:globe) + ' Zones', zone_path, class: item_class %>
+    <%= menu_item icon(:briefcase) + ' Domains', domain_path, class: item_class %>
+    <%= menu_item icon('link-external') + ' Web Redirs', webredir_path, class: item_class %>
+  <% end %>
+  <%= menu_item icon(:person) + ' Profile', edit_user_registration_path(current_user), class: item_class %>
   <%= menu_item icon("sign-out") + ' Log Out', destroy_user_session_path, class: item_class, method: :delete %>
 <% else %>
   <%= menu_item icon("sign-in") + ' Sign In', user_google_oauth2_omniauth_authorize_path, class: item_class %>
