--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,6 +17,27 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <%= f.label :domain, class: "col-sm-3 col-form-label" %><br />
+    <div class="col-sm-9">
+      <%= f.text_field :domain, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "API User", class: "col-sm-3 col-form-label" %><br />
+    <div class="col-sm-9">
+      <%= f.text_field :api_user, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "API Key", class: "col-sm-3 col-form-label" %><br />
+    <div class="col-sm-9">
+      <%= f.text_field :api_key, class: "form-control" %>
+    </div>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
